--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
   pull_request:
-    branches: [ master ]
+    branches:
+      - main
+      - develop
 
 jobs:
   configure:
@@ -25,7 +28,6 @@ jobs:
         run: |
           sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
           make deps
-          brew install conan
       - run: cmake -DCMAKE_BUILD_TYPE=Debug . && make
       - run: GTEST_COLOR=1 ASAN_OPTIONS=detect_leaks=0 ctest -VV
 
